Comment : Swagger API 명세 추가 및 주석 수정 13-55